Amended plugin versions, removed grunt-newer-explicit and added grunt-newer

--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "devDependencies": {
     "grunt": "*",
     "grunt-browser-sync": "*",
-    "grunt-contrib-htmlmin": "^1.4.0",
+    "grunt-contrib-htmlmin": "*",
     "grunt-contrib-imagemin": "*",
     "grunt-contrib-jshint": "*",
     "grunt-contrib-requirejs": "*",
     "grunt-contrib-watch": "*",
-    "grunt-newer-explicit": "*",
-    "grunt-php": "^1.5.1",
+    "grunt-newer": "*",
+    "grunt-php": "*",
     "grunt-sass": "*",
     "grunt-scss-lint": "*",
     "jshint-stylish": "*",
